log
ju., 21 de abr. de 2022 16:04:12: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8f76169
ju., 21 de abr. de 2022 16:25:45: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:106:25: error: comparison of distinct pointer types lacks a cast [-Werror]
   }else if (tree ->root < key){
                         ^
treemap.c:107:28: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
       return searchTreeMap(aux->right,key);
                            ^~~
treemap.c:100:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
treemap.c:108:24: error: comparison of distinct pointer types lacks a cast [-Werror]
   }else if(tree ->root > key){
                        ^
treemap.c:109:29: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
       return  searchTreeMap(aux -> left,key);
                             ^~~
treemap.c:100:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c814a20
ju., 21 de abr. de 2022 16:28:12: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:106:29: error: comparison of distinct pointer types lacks a cast [-Werror]
   }else if (tree -> current < key){
                             ^
treemap.c:107:28: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
       return searchTreeMap(aux->right,key);
                            ^~~
treemap.c:100:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
treemap.c:108:28: error: comparison of distinct pointer types lacks a cast [-Werror]
   }else if(tree -> current > key){
                            ^
treemap.c:109:29: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
       return  searchTreeMap(aux -> left,key);
                             ^~~
treemap.c:100:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3566683
ju., 21 de abr. de 2022 16:41:57: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
test.c: In function 'searchTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
29bdc12
ju., 21 de abr. de 2022 16:43:10: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:119:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
19b43df
ju., 21 de abr. de 2022 16:43:42: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:118:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3fad26a
ju., 21 de abr. de 2022 16:44:08: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:118:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree ->current;
            ~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5c114d5
ju., 21 de abr. de 2022 16:44:23: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:118:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree ->root;
            ~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2f4dcee
ju., 21 de abr. de 2022 16:44:39: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:118:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree ->lower_than;
            ~~~~~^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e52e61f
ju., 21 de abr. de 2022 16:44:57: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
4344713
ju., 21 de abr. de 2022 16:58:49: 
 treemap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:106:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree ->root;
            ~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5e5f394
